[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/enemy_marconi.gd" type="Script" id=1]
[ext_resource path="res://scenes/enemy_marconi_bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/marconi/marconi_0.png" type="Texture" id=3]
[ext_resource path="res://sprites/marconi/marconi_1.png" type="Texture" id=4]
[ext_resource path="res://sprites/marconi/marconi_2.png" type="Texture" id=5]
[ext_resource path="res://sprites/marconi/marconi_3.png" type="Texture" id=6]
[ext_resource path="res://sprites/marconi/marconi_4.png" type="Texture" id=7]
[ext_resource path="res://sprites/marconi/marconi_5.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "active",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 19.8756, 20.4128 )

[node name="enemy_marconi" type="KinematicBody2D" groups=[
"enemy",
]]

z_index = 50
input_pickable = false
collision_layer = 1
collision_mask = 3
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Visibility", "Z Index" ]
detect_radius = 250
fire_rate = 2.0
speed = 100
health = 15
value = 10
bullet = ExtResource( 2 )

[node name="sprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "active"
_sections_unfolded = [ "Z Index" ]

[node name="shape" type="CollisionShape2D" parent="." index="1"]

position = Vector2( -0.209347, 0.209347 )
shape = SubResource( 2 )

[node name="vision" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="shape" type="CollisionShape2D" parent="vision" index="0"]

[node name="timer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="body_entered" from="vision" to="." method="_on_vision_body_entered"]

[connection signal="body_exited" from="vision" to="." method="_on_vision_body_exited"]

[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]


